syntax = "proto3";

package ping;

message PingRequest {
    string id = 1;
}

message PingResponse {
    string id = 1;
}

service Ping {
    rpc SendPing(PingRequest) returns (PingResponse){}
}
